Fix margin bottom to gap in analyze

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -15,8 +15,8 @@ textarea {
   border-radius: 12px;
 }
 
-.analysis__item {
-  margin-bottom: 10px;
+.analysis {
+  gap: 10px;
 }
 
 textarea,
